--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    
     <style type='text/css'>
         .embeddedServiceHelpButton .helpButton .uiButton {
             background-color: #005290;
@@ -22,7 +22,7 @@
     <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
     <script type='text/javascript'>
         var initESW = function(gslbBaseURL) {
-            embedded_svc.settings.displayHelpButton = true; //Or false
+            embedded_svc.settings.displayHelpButton = false; //Or false
             embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
     
             //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
@@ -71,6 +71,14 @@
             initESW('https://service.force.com');
         }
     </script>
+    <script type='text/javascript'>
+        function bootstrapChat() {
+            embedded_svc.bootstrapEmbeddedService();
+        }
+    </script>
+    <button onclick="bootstrapChat()">
+        Click me to show the Embedded Chat experience.
+    </button>
 
 </body>
 
