--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
     <script type='text/javascript'>
         var initESW = function(gslbBaseURL) {
-            embedded_svc.settings.displayHelpButton = false; //Or false
+            embedded_svc.settings.displayHelpButton = true; //Or false
             embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
     
             //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
@@ -39,6 +39,7 @@
             //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
             //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
             //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+            embedded_svc.settings.smallCompanyLogoImgURL = 'https://d5g00000bk6skeaz-dev-ed--c.visualforce.com/resource/1638156009000/smallCompanylogo'
     
             embedded_svc.settings.enabledFeatures = ['LiveAgent'];
             embedded_svc.settings.entryFeature = 'LiveAgent';
@@ -71,14 +72,7 @@
             initESW('https://service.force.com');
         }
     </script>
-    <script type='text/javascript'>
-        function bootstrapChat() {
-            embedded_svc.bootstrapEmbeddedService();
-        }
-    </script>
-    <button onclick="bootstrapChat()">
-        Click me to show the Embedded Chat experience.
-    </button>
+   
 
 </body>
 
