--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 outline: 1px solid #005290;
             }
             
-            .modalContainer {
+            .embeddedServiceSidebar.modalContainer {
                 background-color:red;
             }
         </style>
