--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
          
-         <button value="Chat Now" onclick="chatMethod()" />
+         <button onclick="chatMethod()">Chat Now</button>
     
     <style type='text/css'>
     .embeddedServiceHelpButton .helpButton .uiButton {
