--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type='text/javascript'>
         function initEmbeddedMessaging() {
             try {
-                embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+                embeddedservice_bootstrap.settings.language = 'no'; // For example, enter 'en' or 'en-US'
                 embeddedservice_bootstrap.init(
                     '00D1s0000000Ni3',
                     'GIT_ESD',
