--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+    <meta name="referrer" content="no-referrer-when-downgrade" />
 </head>
 
 <body>
